# video-downloader

./: .gitignore  .gitmodules  README.md  com.github.unrud.VideoDownloader.json  flake.nix  meson.build  result  run-dev.sh  setup.cfg
.github/workflows/: snapcraft.yml
build-aux/meson/: create-gresource.py  extract-xml.py  move.py  postinstall.py
data/: com.github.unrud.VideoDownloader.appdata-releases.xml.in  com.github.unrud.VideoDownloader.appdata.xml.in  com.github.unrud.VideoDownloader.desktop.in  com.github.unrud.VideoDownloader.gschema.xml  com.github.unrud.VideoDownloader.metainfo-releases.xml.in  com.github.unrud.VideoDownloader.metainfo.xml.in  meson.build
data/build-aux/meson/: merge-xml.py  rename-icons.py  rename-icons.sh
flatpak/: com.github.unrud.VideoDownloader.yaml
github/workflows/: snapcraft.yml
po/: LINGUAS  POTFILES  ar.po  az.po  be.po  ca.po  ckb.po  cs.po  de.po  el.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  it.po  ja.po  ka.po  ko.po  meson.build  mic.po  ml.po  nb.po  nb_NO.po  nl.po  ota.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  (+12 more)
snap/: snapcraft.yaml
src/: __init__.py  about_dialog.py  about_dialog.ui  about_dialog.ui.in  authentication_dialog.py  authentication_dialog_login.ui  authentication_dialog_password.ui  base_dialog.py  base_window_mixin.py  download_frame.py  error_frame.py  login_dialog.py  main.py  main_frame.py  meson.build  model.py  platform.py  playlist_dialog.py  resize_label.py  shortcuts_dialog.py  shortcuts_dialog.ui  style.css  success_frame.py  util.py  utils.py  video-downloader.in  video_downloader.gresource.xml  videopassword_dialog.py  window.py  window.ui  window.ui~
src/downloader/: __init__.py  __main__.py  meson.build  rpc.py  youtube_dl_formats.py  youtube_dl_monkey_patch.py  youtube_dl_slave.py  yt_dlp_monkey_patch.py  yt_dlp_slave.py
src/util/: __init__.py  connection.py  meson.build  path.py  response.py
